--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="header">
       <div class="logo">😊</div>
       <div>
-        <div class="title">Emoji ↔ English Translator</div>
-        <div class="subtitle">Don't Guess the Meaning – Just Translate It!</div>
+        <div class="title">Emoji ↔ English Translate</div>
+        <div class="subtitle">Don't guess the meaning, just translate it!</div>
       </div>
     </div>
 
