--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               <div>Translating…</div>
             </div>
             <textarea id="outputText" class="textarea" readonly placeholder="Translation will appear here..."></textarea>
+            <button id="speakBtn" class="speak" title="Speak translation">🔊</button>
           </div>
         </div>
       </div>
