--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
               <div>Translating…</div>
             </div>
             <textarea id="outputText" class="textarea" readonly placeholder="Translation will appear here..."></textarea>
+            <button id="imageBtn" class="speak" title="Generate shelf image" style="display:none">🖼️</button>
             <button id="speakBtn" class="speak" title="Speak translation">🔊</button>
           </div>
+          <div id="imageResult" class="image-result" style="display:none"></div>
         </div>
       </div>
 
